--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["flit"]
+requires = ["flit","spacy","dash","tensorflow"]
 build-backend = "flit.buildapi"
 
 [tool.flit.metadata]
