--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,4 @@ description-file="README.md"
 
 classifiers = ["License :: OSI Approved :: Apache Software License"]
 [tool.flit.metadata.urls]
-Documentation=https://rajagurunath.github.io/mlvajra/
+Documentation=https://mlvajra.readthedocs.io/en/latest/ 
