--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ backcall==0.1.0
 boto3==1.9.133
 botocore==1.12.133
 cachetools==3.1.0
-certifi==2019.3.9
+# certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 clipper-admin==0.3.0
@@ -45,7 +45,7 @@ mlflow==0.9.0.1
 mlvajra==0.1.3.0
 modAL==0.3.4
 networkx==2.3
-nni==0.6
+#nni==0.6
 nose==1.3.7
 nose-exclude==0.5.0
 numpy==1.16.2
@@ -54,11 +54,11 @@ pandas==0.24.2
 parso==0.4.0
 pexpect==4.7.0
 pickleshare==0.7.5
-pkg-resources==0.0.0
+# pkg-resources==0.0.0
 prometheus-client==0.6.0
 prompt-toolkit==2.0.9
 protobuf==3.7.1
-psutil==5.6.1
+# psutil==5.6.1
 ptyprocess==0.6.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
@@ -70,7 +70,7 @@ pyrsistent==0.14.11
 python-dateutil==2.8.0
 PythonWebHDFS==0.2.3
 pytz==2019.1
-PyYAML==5.1
+# PyYAML==5.1
 querystring-parser==1.2.3
 redis==3.2.1
 requests==2.21.0
